[package]
name = "shoogah_macros"
version = "0.1.0"
authors = ["Jose Colon Rodriguez <jec.rod@gmail.com>"]
edition = "2018"
description = "macros for the shoogah library crate"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
as_bool = { path = "../as_bool" }
