[package]
name = "shoogah_macros"
version = "0.1.0"
authors = ["Jose Colon Rodriguez <jec.rod@gmail.com>"]
edition = "2018"
description = "macros for the shoogah library crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jecolon/shoogah_macros"
documentation = "https://docs.rs/shoogah_macros"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
as_bool = "0.1"
